Fixed scrollbar

--- a/index.css
+++ b/index.css
@@ -54,8 +54,9 @@
     flex-direction: column;
 }
 
-#hero button{
 
+#top10 {
+text-align: center;
 }
 
 .scroll-container {
